[package]
name = "pin_che"
version = "0.1.0"
authors = ["lpgo <whereisgirl@126.com>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
config = "*"
lazy_static = "^0.2.8"
bson = "0.10.0"
mongodb = "0.3.7"
serde_derive = "1.0"
serde = "1.0"
redis = "0.8.0"
r2d2 = "0.7.4"
r2d2_redis = "0.6.0"