[package]
name = "pin_che"
version = "0.1.0"
authors = ["lpgo <whereisgirl@126.com>"]

[dependencies]
rocket = "^0.3.6"
rocket_codegen = "^0.3.6"
rocket_contrib = "^0.3.6"
config = "*"
lazy_static = "^0.2.8"
bson = "^0.10.0"
mongodb = "^0.3.7"
serde_derive = "^1.0"
serde = "^1.0"
serde-redis = "^0.7.0"
redis = "^0.8.0"
r2d2 = "^0.7.4"
r2d2_redis = "^0.6.0"
jwt = "^0.4.0"
rust-crypto = "^0.2"
rustc-serialize = "^0.3"
futures = "^0.1"
hyper = "^0.11"
tokio-core = "^0.1"
tokio-timer = "^0.1.2"
hyper-tls = "^0.1.2"